Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>A custom object to store job applications</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>App-{0000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>