Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to an Account that represents the company where the job application is being sent</description>
    <inlineHelpText>Select the company where the job application is being sent</inlineHelpText>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>