Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>A long text area to hold detailed information about the job such as responsibilities, qualifications, benefits, etc.</description>
    <inlineHelpText>Information about the job such as responsibilities, qualifications, benefits, etc.</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>