Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Medicare_Withholding__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Withholding__c</fullName>
    <description>Estimate of Medicare withholding</description>
    <label>Medicare Withholding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>