Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>A text field to keep track of the specific job title or position being applied
for</description>
    <inlineHelpText>Enter the job position or title being applied for</inlineHelpText>
    <label>Position/Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>