Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>A picklist field to rate the attractiveness of the job on a predetermined scale</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Star</fullName>
            </value>
            <value>
                <fullName>4 Star</fullName>
            </value>
            <value>
                <fullName>3 Star</fullName>
            </value>
            <value>
                <fullName>2 Star</fullName>
            </value>
            <value>
                <fullName>1 Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>