Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Social_Security_Tax__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Tax__c</fullName>
    <description>Estimate of Social Security tax (6.20% as of 2023)</description>
    <label>Social Security Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>