Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <description>Display stars according to the Rating picklist value</description>
    <formula>IMAGE(
IF(ISPICKVAL(Rating__c, &quot;5 Star&quot;), &quot;/img/samples/stars_500.gif&quot;,
IF(ISPICKVAL(Rating__c, &quot;4 Star&quot;), &quot;/img/samples/stars_400.gif&quot;,
IF(ISPICKVAL(Rating__c, &quot;3 Star&quot;), &quot;/img/samples/stars_300.gif&quot;,
IF(ISPICKVAL(Rating__c, &quot;2 Star&quot;), &quot;/img/samples/stars_200.gif&quot;,
IF(ISPICKVAL(Rating__c, &quot;1 Star&quot;), &quot;/img/samples/stars_100.gif&quot;, &quot;/img/samples/stars_000.gif&quot;
))))),
&quot;Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating</label>
    <type>Text</type>
</CustomField>