Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Pay__c</fullName>
    <description>Estimate of take-home pay</description>
    <formula>IF(
    Salary__c &gt; 0, 
    Salary__c - Federal_Income_Tax__c - Social_Security_Tax__c - Medicare_Withholding__c, 
    0.00
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>