Job-Application-Tracker-main/Job-Application-Tracker-main/force-app/main/default/objects/Job_Application__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>A URL field to store the web link of the job posting</description>
    <inlineHelpText>Link to Job posting</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>